Fixed intensives page banner on small phone viewport

--- a/src/screens/intensives/style.module.css
+++ b/src/screens/intensives/style.module.css
@@ -64,3 +64,15 @@
         z-index: 1;
     }
 }
+
+@media only screen and (max-width: 375px) {
+    .banner_image {
+        height: 400px;
+    }
+
+    .banner_text {
+        top: calc(50% - 204px);
+        padding-right: 30px;
+        padding-left: 0;
+    }
+}
